CSS elements for headers and spacing of sections, added Contact Me header, Page title in head and corrected URL in Readme File

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,6 @@
     padding: 50px;
   }
 
-  .sectionHeading {
-    text-align: center;
-  }
-
   .workCardsPad {
     padding: 0px 30px 30px 30px
   }
@@ -53,6 +49,21 @@
     font-size: 15px;
   }
 
+
+  #profile-pic {
+    width: 20%;
+  }
+
+  .about{
+    margin-top: 10px;
+  }
+
+h3{
+  margin-top: 20px;
+  width: 50%;
+  margin-left: 25%;
+}
+
   .hero-banner {
     height: 400px;
     width: 100%;
@@ -76,19 +87,29 @@
       padding: 20px 40px;
   }
 
-  #profile-pic {
-    width: 20%;
+  .skills{
+    margin:0;
+    padding: 0;
+    margin-bottom: 20px;
+    }
+
+  .skills img {
+    margin-top: 35px;
+  }
+
+  .work {
+    margin:0;
+    padding: 0;
+  }
+
+  .projectCard{
+    margin-bottom: 20px !important;
   }
 
   .contactContain {
     background: url(../images/02-hero-bg.jpg);
     background-size: cover;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+    margin-top: 20px;
   }
 
   form {
